# prompt-compiler

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
benchmarks/: run_bench.sh
benchmarks/prompts/: 001-coding-assistant.txt  002-customer-support.txt  003-creative-writer.txt  004-data-analyst.txt  005-tutor.txt  006-translator.txt  007-legal-reviewer.txt  008-recipe-chef.txt  009-email-writer.txt  010-debug-helper.txt
benchmarks/results/: latest.json
benchmarks/tasks/: common-tasks.yml
crates/promptc-core/: Cargo.toml
crates/promptc-core/src/: error.rs  lib.rs  main.rs  napi_bindings.rs  safety.rs
crates/promptc-core/src/analysis/: gptisms.rs  quality.rs
crates/promptc-core/src/codegen/: claude.rs  gpt.rs  mistral.rs  mod.rs
crates/promptc-core/src/embedder/: fastembed.rs  mod.rs  tfidf.rs
crates/promptc-core/src/lexer/: mod.rs  rules.rs  token.rs
crates/promptc-core/src/optimizer/: mod.rs  pass.rs
crates/promptc-core/src/optimizer/passes/: attention_reorder.rs  context_prune.rs  contradiction.rs  dead_instruction.rs  example_diversity.rs  mod.rs  negative_to_positive.rs  redundancy.rs
crates/promptc-core/src/parser/: ast.rs  mod.rs
crates/promptc-core/src/token_counter/: mod.rs
crates/promptc-core/tests/: integration_test.rs
python/promptc/: __init__.py
src/: cli.ts  compiler.ts  error.rs  eval.ts  index.ts  lib.rs  main.rs  native.ts  python.rs  report.ts  safety.rs  server.ts  types.ts
src/analysis/: gptisms.rs  mod.rs
src/codegen/: claude.rs  gpt.rs  llama.rs  mistral.rs  mod.rs
src/embedder/: fastembed.rs  mod.rs
src/optimizer/: mod.rs
src/optimizer/passes/: attention_reorder.rs  context_prune.rs  contradiction.rs  dead_instruction.rs  example_diversity.rs  redundancy.rs
src/parser/: ast.rs  mod.rs
src/token_counter/: mod.rs
tests/: integration_test.rs
