[package]
name = "prompt-compiler"
version = "0.1.0"
edition = "2021"
description = "A compiler for LLM prompts — lex, parse, optimize, and generate model-specific output"
license = "MIT"

[[bin]]
name = "prompt-compiler"
path = "src/main.rs"

[lib]
name = "prompt_compiler"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
ordered-float = "4"
