[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "promptc"
version = "0.2.0"
description = "A compiler for LLM prompts — lex, parse, optimize, and generate model-specific output"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "promptc"
